German translation/fix lexicon

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -5103,6 +5103,7 @@ tr: Adına göre liste
 
     descendants tree
 co: arburu di discendenza
+de: Nachkommen-Baum
 en: descendants tree
 fr: arbre de descendance
 pt: árvore de descendentes
